--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Savvy Cabby</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="p-2"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
