--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Savvy Cabby</title>
   </head>
   <body>
-    <div id="app" class="p-5 h-screen w-screen flex flex-col justify-evenly"></div>
+    <div id="app" class="p-5 h-screen w-screen flex flex-col justify-between"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
